# qbactivator

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PowerCMD.sh  README  README.md  VERSION  build.cfg  build.sh  buildtest.sh  compile  log.txt  qb-pre-activator.cmd  qbactivator.cmd  qbactivator_psn.cmd  qbkill.bat  qbpurge.cmd  qbregist.ps1
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
Entitlement Client/v8/: EntitlementClient.config  EntitlementDataStore.ecml  IntuitEntitlementErrorLog.txt  IntuitEntitlementLog.txt  IntuitEntitlementReport.txt  PartitionData.xml  RemotingServer.config  SessionData.xml
QBTOOLHUB/Resource/: 3371fix.bat  CleanInstallTool.txt.bat  qbpdftool.bat  qbrefresher.bat  sfcscannow.bat
QBTOOLHUB/config/: CLSLibraryConfig_Prod.xml
assets/artwork.design/: qbactivator.afdesign
res/doc/: readme.txt
src/: AddLicense017.ps1  BasicHash016.ps1  ExecutionModule.ps1  Invoke-LicenseInstallation.ps1  Main.ps1  decode.ps1  lib.rs  main.cmd  main.rs  qbreadme.min.md  qbreadme.txt
src/archive/: qbVersionList_foreach.bak.ps1  waitscreen.bak.ps1
src/functions/: Add-ClientDataPatchModule.ps1  Add-ClientPatchModule.ps1  Add-PosLicense.ps1  BasicStuff.ps1  Downloader.ps1  Initialize-ObjectsAndVariables.ps1  Invoke-URLInDefaultBrowser.ps1  Licensing.ps1  ObjectsAndVariables.ps1  Write-InformationToDisplay.ps1
src/main/: Main.ps1  (+4 more)
tests/: ProgressTimeTest.cmd  ReturnLoadingTest2.ps1  ReturnLoadingTest3.ps1  installer_size_data.txt  qbhash.ps1  qbreadme.md  qbregist.ps1  qbregist2.ps1  qbregist3.ps1  silent.txt  web_header_test.ps1
(+83 files in other folders)
